# vms_server_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ai_ocr_service.py  build_and_run.bat  go2rtc.yaml  lan_scanner.py  nvr_status_poller.py  patch_service.py  requirements-ai.txt  supervision_ai_service.py
database/: init_postgres.sql
docs/: vms-ui-redesign.md
include/: AnprIntegration.hpp  CORSMiddleware.hpp  InferenceEngine.hpp  StorageEngine.hpp
src/: AnprIntegration.cpp  InferenceEngine.cpp  StorageEngine.cpp  main.cpp
web/: camera_status.json  index.html  manager.html
web/css/: theme.css
web/js/: webrtc.js
